- order service is now listening to restaurant creation - fixed a bug where orders could be created without a restaurant - fixed some dependencies - README improved, adding Postman Collection