@@ -1,8 +1,10 @@
 package io.github.gustavosdelgado.microrestaurant.service;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
+import org.springframework.amqp.rabbit.core.RabbitTemplate;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataAccessException;
 import org.springframework.dao.DataIntegrityViolationException;
@@ -27,6 +29,9 @@ public class RestaurantService {
     @Autowired
     private UserRepository userRepository;
 
+    @Autowired
+    private RabbitTemplate rabbitTemplate;
+
     public RestaurantResponse create(RestaurantRequest request, Long userId) throws BadRequestException {
         try {
             Optional<User> o = userRepository.findById(userId);
@@ -34,8 +39,10 @@ public class RestaurantService {
                 throw new DataIntegrityViolationException("User not found");
             }
 
-            Restaurant restaurant = new Restaurant(request.name(), Arrays.asList(o.get()));
+            Restaurant restaurant = new Restaurant(request.name(), List.of(o.get()));
             restaurant = restaurantRepository.save(restaurant);
+
+            rabbitTemplate.convertAndSend("restaurant.exchange", "", restaurant);
             return new RestaurantResponse(restaurant.getName(), restaurant.getId());
 
         } catch (DataAccessException e) {
